--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,20 @@ a {
 	text-decoration: none;
 	color: black;
 }
+/*imagenes portadas*/
+body{
+	background-image: url("../images/fotosPortafolio/fondoback5.jpg");
+	background-attachment: fixed;
+	background-repeat: repeat;
+	background-size: 100%;
+	width: 100%;
+	height: 700px;
+}
+
 /*letras*/
+
+
+
 .titulos{
 
 	font-weight: bold;
@@ -31,7 +44,7 @@ a {
 	padding: 0 3%;
 }
 .padTop2{
-	margin-top: 5px;
+	margin-top: 2px;
 }
 .padTop5{
 	padding-top: 5%;
@@ -106,18 +119,6 @@ progress::-moz-progress-bar {
 	
 }
 
-
-/*imagenes portadas*/
-body{
-	background-image: url("../images/fotosPortafolio/fondoback5.jpg");
-	background-attachment: fixed;
-	background-repeat: repeat;
-	background-size: 100%;
-	width: 100%;
-	height: 700px;
-}
-
-
 /**/
 /*imagenes de Web*/
 .adaptarImgWeb{
@@ -138,8 +139,9 @@ body{
 .elemento {
 
 	cursor: pointer;
-	margin: 5px 10px;
+	margin: 20px 0;
 	width: 100%;
+
 
 	-webkit-transition: all 0.2s ease-out;
 	-moz-transition: all 0.2s ease-out;
@@ -147,7 +149,7 @@ body{
 	transition: all 0.2s ease-out;
 }
 
-.elemento img:hover{
+.elemento:hover{
 	
 	box-shadow: 0 0 40px rgba(0,0,0,0.8);
 	-webkit-transform: scale(1.1);
@@ -166,29 +168,12 @@ body{
 	width: 400px;
 }
 .tamañoImgED{
-	height: 290px;
+	height: 235px;
 }
 
-.tamañoImgTor{
-	height: 340px;
+.tamañoImgED2{
+	height: 225px;
 }
-
-.tamañoImgCaja{
-	height: 220px;
-}
-
-.tamañoImgGac{
-	height: 280px;
-}
-
-.tamañoImgTost{
-	height: 285px;
-}
-
-.tamañoImgSalsa{
-	height: 310px;
-}
-
 .contenedor {
 	width:85%;
 	margin:5% auto;
@@ -196,23 +181,9 @@ body{
 
 }
  
-.elemento {
-	width:250px;
-	background:#fff;
-	float:left;
-	margin-right:15px;
-	margin-bottom:15px;
 
-}
- 
-.elemento p {
-	padding:10px;
-	font-size:13px;
-}
- 
-.elemento img {
-	width:100%;
-}
+
+
 /*contacto*/
 .seccionContacto{
 	padding: 10% 0;
@@ -226,45 +197,7 @@ body{
 .linkHov:hover{
 	color: red;
 }
-/*estilos del modal*/
-.modal{
-	position: fixed;
-	background: rgba(0, 0, 0, 0.8);
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-.modal h3{
-	color: #fff;
-	font-size: 35px !important;
-	text-align: center;
-	margin: 15px 0;
-}
-.imagen{
-	width: 100%;
-	height: 50%;
-}
-.imagen a {
-	color: #fff;
-	font-size: 40px;
-	text-decoration: none;
-	margin: 0 10px;
-}
-.image a:nth-child(2){
-	margin: 0;
-	height: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.image img{
-	width: 500px;
-	height: 100%;
-	max-width: 100%;
-	border: 7px solid #fff;
-	box-sizing: border-box;
-}
+
 .fondoTrans{
 	
 	padding: 5%;
@@ -287,7 +220,30 @@ footer{
 
 }
 	
-/**/
-@media (min-width: 768px) { 
+/*mediaquery*/
+
+
+ @media (min-width : 630px) and (max-width : 766px) {
+	.gallery img{
+		
+		margin-left: 90px;
+	}
+ }
+  @media (min-width : 500px) and (max-width : 629px) {
+	.gallery img{
+		
+		margin-left: 50px;
+	}
+ }
+ @media (min-width : 630px) and (max-width : 800px) {
+	.tamañoWidMed{
 	
-}
+		margin-left: 35%;
+	}
+ }
+  @media (min-width : 801px) and (max-width : 990px) {
+	.tamañoWidMed{
+	
+		margin-left: 55%;
+	}
+ }
