--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,14 @@ body{
 	width: 100%;
 	height: 700px;
 }
-
+.fotoPerfil{
+	width: 200px;
+	height: auto;
+	border-radius: 50%;
+	
+	
+}
 /*letras*/
-
-
-
 .titulos{
 
 	font-weight: bold;
@@ -30,6 +33,15 @@ body{
 }
  li{
 	list-style:none;
+}
+.linkcv{
+	text-decoration: underline;
+	font-size: 2em;
+}
+.titNombre{
+	font-size: 3em;
+	color: rgba(0, 0, 0, 0.5);
+	font-weight: 800;
 }
 /*acomodo*/
 .maPd0{
@@ -114,8 +126,8 @@ progress::-moz-progress-bar {
 /*contenedores*/
 .contenedorSecciones{
 	background-color: white;
-	width: 95%;
-	margin:  5% 2% 0 3%;
+	width: 90%;
+	margin:  5% 2% 0 6%;
 	
 }
 
@@ -127,11 +139,12 @@ progress::-moz-progress-bar {
 
 }
 .btn{
-	background: orange !important;
+	background: #FFA500 !important;
 	color: white !important;
 	border-radius: 50px !important;
 	border-style: none !important;
 	margin-top: 5%;
+	margin-bottom: 5%;
 }
 
 
@@ -182,18 +195,17 @@ progress::-moz-progress-bar {
 }
  
 
-
-
 /*contacto*/
 .seccionContacto{
-	padding: 10% 0;
-	height: auto;
+	padding: 5% 0;
+	height: 100px;
 	width: 100%;
-	
-	
-	
 }
 
+.linkHov i{
+	padding: 0 5%;
+	margin-top: 20%;
+}
 .linkHov:hover{
 	color: red;
 }
@@ -201,9 +213,11 @@ progress::-moz-progress-bar {
 .fondoTrans{
 	
 	padding: 5%;
-	width: 100%;
+	width: 60%;
 	margin: 5% 0;
-	background: rgba(255, 255, 255, 0.8);
+	background: rgba(255, 255, 255, 0.5);
+	margin-left: 22%;
+	border-radius: 5px 5px 5px 5px;
 
 }
 .textTamP{
@@ -211,13 +225,14 @@ progress::-moz-progress-bar {
 	padding-left: 2%;
 	font-size: 0.5em;
 
-}
-footer{
-	background-color: black;
-	width: 100%;
-	height: 30px;
 	
 
+}
+
+.bgBla{
+	background-color: black;
+	width: 100%;
+	padding: 1%;
 }
 	
 /*mediaquery*/
@@ -228,6 +243,7 @@ footer{
 		
 		margin-left: 90px;
 	}
+	
  }
   @media (min-width : 500px) and (max-width : 629px) {
 	.gallery img{
@@ -240,10 +256,17 @@ footer{
 	
 		margin-left: 35%;
 	}
+	
  }
-  @media (min-width : 801px) and (max-width : 990px) {
+
+ @media (min-width : 801px) and (max-width : 990px) {
 	.tamañoWidMed{
 	
 		margin-left: 55%;
 	}
+		
+ }
+   @media (min-width : 991px) and (max-width : 1000px) {
+	
+		
  }
