--- a/css/style.css
+++ b/css/style.css
@@ -25,19 +25,12 @@ body{
 	
 	
 }
-.ribbon {
-	margin-left: 15%;
-     width: 550px;
-     height: 230px;
-     -moz-border-radius: 0 50% / 0 100%;
-     -webkit-border-radius: 0 50% / 0 100%;
-     border-radius: 0 50% / 0 100%;
-     background: rgba(250, 250, 250, 0.6);
-    
- }
- .colorfront{
- 	color: #17775F;
- 	
+
+ .cuadroTrans{
+ 	background-color: rgba(250, 250, 250, 0.5);
+ 	width: 60%;
+ 	height: auto;
+ 	margin-left: 21%;
  }
  .lineBla{
  	border: 0.5px solid;
@@ -263,11 +256,32 @@ progress::-moz-progress-bar {
 /*mediaquery*/
 
 
+ @media (min-width : 300px) and (max-width : 500px) {
+	
+	.cuadroTrans{
+ 	background-color: rgba(250, 250, 250, 0.5);
+ 	width: 100%;
+ 	height: auto;
+ 	margin-left: 2%;
+ 	padding: 5%;
+ 	}
+ 	.titNombre{
+	font-size: 2em;
+	font-weight: 800;
+	}
+ }
+	
  @media (min-width : 630px) and (max-width : 766px) {
 	.gallery img{
 		
 		margin-left: 90px;
 	}
+	.cuadroTrans{
+ 	background-color: rgba(250, 250, 250, 0.5);
+ 	width: 60%;
+ 	height: auto;
+ 	margin-left: 21%;
+ }
 	
  }
   @media (min-width : 500px) and (max-width : 629px) {
@@ -275,6 +289,13 @@ progress::-moz-progress-bar {
 		
 		margin-left: 50px;
 	}
+	.ribbon {
+		margin-left: 2%;
+	     width: 400px;
+	     height: 230px;
+	    
+    
+	 }
  }
  @media (min-width : 630px) and (max-width : 800px) {
 	.tamañoWidMed{
@@ -289,9 +310,7 @@ progress::-moz-progress-bar {
 	
 		margin-left: 55%;
 	}
-		
- }
-   @media (min-width : 991px) and (max-width : 1000px) {
 	
 		
  }
+   
