--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@ a.enlaceNav:hover{
 body{
 	background-image: url("../images/fotosPortafolio/fondoback5.jpg");
 	background-attachment: fixed;
+	background-repeat: no-repeat;
 	background-size: cover;
 	width: 97%;
-	height: 700px;
 }
 .fotoPerfil{
 	width: 200px;
@@ -31,6 +31,7 @@ body{
  	width: 60%;
  	height: auto;
  	margin-left: 21%;
+ 	padding: 2%;
  }
  .lineBla{
  	border: 0.5px solid;
@@ -57,7 +58,11 @@ body{
 	font-size: 2em;
 }
 .titNombre{
-	font-size: 3em;
+	font-size: 5em;
+	font-weight: 900;
+}
+.titApe{
+	font-size: 2em;
 	font-weight: 800;
 }
 .backTitle{
@@ -265,9 +270,14 @@ progress::-moz-progress-bar {
  	margin-left: 2%;
  	padding: 5%;
  	}
- 	.titNombre{
-	font-size: 2em;
-	font-weight: 800;
+ 	
+	.titNombre{
+		font-size: 3em;
+		font-weight: 900;
+	}
+	.titApe{
+		font-size: 2em;
+		font-weight: 800;
 	}
  }
 	
@@ -281,7 +291,17 @@ progress::-moz-progress-bar {
  	width: 60%;
  	height: auto;
  	margin-left: 21%;
- }
+ 	}
+ 	.titNombre{
+		font-size: 3em;
+		font-weight: 900;
+	}
+	.titApe{
+		font-size: 2em;
+		font-weight: 800;
+	}
+
+	
 	
  }
   @media (min-width : 500px) and (max-width : 629px) {
@@ -289,13 +309,21 @@ progress::-moz-progress-bar {
 		
 		margin-left: 50px;
 	}
-	.ribbon {
-		margin-left: 2%;
-	     width: 400px;
-	     height: 230px;
-	    
-    
+	.cuadroTrans{
+	 	background-color: rgba(250, 250, 250, 0.5);
+	 	width: 70%;
+	 	height: auto;
+	 	margin-left: 21%;
 	 }
+
+	.titNombre{
+		font-size: 3em;
+		font-weight: 900;
+	}
+	.titApe{
+		font-size: 2em;
+		font-weight: 800;
+	}
  }
  @media (min-width : 630px) and (max-width : 800px) {
 	.tamañoWidMed{
