--- a/css/text.css
+++ b/css/text.css
@@ -1,7 +1,7 @@
 
 
 /**/
-@import url(http://fonts.googleapis.com/css?family=Lato:900);
+@import url(https://fonts.googleapis.com/css?family=Lato:900);
 *, *:before, *:after{
   box-sizing:border-box;
 }
